@@ -2,6 +2,7 @@
     . Make ->follow_link() also respect C<synchronize> by making ->follow_link()
       mostly synonymous with ->click()
     . Document the C<dom> option to ->click() (noted by M. Schwern)
+    . ->click(undef) now fails
 
 0.33 20100819
     . Add ->activateTab() for setting the currently displayed tab
